--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-streamlit
-tensorflow
-pillow
-numpy
-h5py
+streamlit == 1.32.2
+tensorflow == 2.16.1
+pillow == 10.3.0
+numpy == 1.26.4
+h5py == 3.10.0
+keras == 3.1.1
