--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit == 1.32.2
-tensorflow == 2.6.0
-pillow == 8.0.0
-numpy == 1.19.5
-h5py == 3.1.0
-keras == 3.2.0
+streamlit 
+tensorflow 
+pillow 
+numpy 
+h5py 
+keras 
